// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PhoneNumberInput> should match default snapshot 1`] = `
<DocumentFragment>
  <div
    class="PhoneNumberInputStyles__PhoneNumberInputContainer-sc-80kraj-0 bBjGkf"
  >
    <div
      class="PhoneNumberInputStyles__TopRow-sc-80kraj-1 ecZrTO"
      data-invalid="false"
    >
      <button
        class="PhoneNumberInputStyles__CallingCodeInputToggle-sc-80kraj-2 jtvyf"
        data-testid="calling-code-input-toggle"
      >
        +123
        <span
          class="PhoneNumberInputStyles__CallingCodeInputOpenIndicator-sc-80kraj-3 ibEuCp"
          id="downshift-0-toggle-button"
          tabindex="-1"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-x7d280-0 cJSNzi"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <polygon
              points="11.8 80.8 0 69 50 19 100 69 88.2 80.8 50 42.4"
            />
          </svg>
        </span>
      </button>
      <input
        aria-label="Mobile Number"
        class="PhoneNumberInputStyles__SignificantNumberInput-sc-80kraj-5 gcYwNH"
        data-invalid="false"
        data-testid="significant-number-input"
        id="significant-number-input-1"
        placeholder="Mobile Number"
        type="tel"
        value=""
      />
      <label
        class="PhoneNumberInputStyles__Label-sc-80kraj-4 hYHKGJ"
        for="significant-number-input-1"
      >
        Mobile Number
      </label>
      <div
        class="PhoneNumberInputStyles__TopRowAddon-sc-80kraj-6 cnoRYQ"
        data-testid="addon"
      />
    </div>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="downshift-0-menu"
      class="PhoneNumberInputStyles__CallingCodeInput-sc-80kraj-7 bzsSEv"
      data-testid="calling-code-input"
      role="combobox"
    >
      <div
        class="PhoneNumberInputStyles__CallingCodeFilterInputGroup-sc-80kraj-8 kdzBiN"
      >
        <input
          aria-autocomplete="list"
          aria-controls="downshift-0-menu"
          aria-labelledby="downshift-0-label"
          autocomplete="off"
          class="PhoneNumberInputStyles__CallingCodeFilterInput-sc-80kraj-9 jybfmh"
          data-testid="calling-code-filter-input"
          id="downshift-0-input"
          placeholder="Type country code or country name"
          value=""
        />
      </div>
      <ol
        aria-labelledby="downshift-0-label"
        class="PhoneNumberInputStyles__CallingCodeOptionsList-sc-80kraj-11 geNvIQ"
        id="downshift-0-menu"
        role="listbox"
      >
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 gMEijG"
          id="downshift-0-item-0"
          role="option"
          title="Indonesia"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +62
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Indonesia
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-0-item-1"
          role="option"
          title="Malaysia"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +60
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Malaysia
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-0-item-2"
          role="option"
          title="Singapore"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +65
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Singapore
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-0-item-3"
          role="option"
          title="Taiwan"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +886
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Taiwan
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-0-item-4"
          role="option"
          title="Vietnam"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +84
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Vietnam
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 iSowxl"
          id="downshift-0-item-5"
          role="option"
          title="Afghanistan"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +93
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Afghanistan
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-0-item-6"
          role="option"
          title="Albania"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +355
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Albania
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-0-item-7"
          role="option"
          title="Algeria"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +213
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Algeria
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-0-item-8"
          role="option"
          title="Germany"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +42
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Germany
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-0-item-9"
          role="option"
          title="United States"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +1
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              United States
            </div>
          </div>
        </li>
      </ol>
    </div>
    <div
      class="PhoneNumberInputStyles__Error-sc-80kraj-17 EDVOx"
      data-testid="error"
    />
  </div>
</DocumentFragment>
`;

exports[`<PhoneNumberInput> should match snapshot after input has been made 1`] = `
<DocumentFragment>
  <div
    class="PhoneNumberInputStyles__PhoneNumberInputContainer-sc-80kraj-0 bBjGkf"
  >
    <div
      class="PhoneNumberInputStyles__TopRow-sc-80kraj-1 ecZrTO"
      data-invalid="false"
    >
      <button
        class="PhoneNumberInputStyles__CallingCodeInputToggle-sc-80kraj-2 jtvyf"
        data-testid="calling-code-input-toggle"
      >
        +123
        <span
          class="PhoneNumberInputStyles__CallingCodeInputOpenIndicator-sc-80kraj-3 ibEuCp"
          id="downshift-5-toggle-button"
          tabindex="-1"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-x7d280-0 cJSNzi"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <polygon
              points="11.8 80.8 0 69 50 19 100 69 88.2 80.8 50 42.4"
            />
          </svg>
        </span>
      </button>
      <input
        aria-label="Mobile Number"
        class="PhoneNumberInputStyles__SignificantNumberInput-sc-80kraj-5 gcYwNH"
        data-invalid="false"
        data-testid="significant-number-input"
        id="significant-number-input-1"
        placeholder="Mobile Number"
        type="tel"
        value=""
      />
      <label
        class="PhoneNumberInputStyles__Label-sc-80kraj-4 hYHKGJ"
        for="significant-number-input-1"
      >
        Mobile Number
      </label>
      <div
        class="PhoneNumberInputStyles__TopRowAddon-sc-80kraj-6 cnoRYQ"
        data-testid="addon"
      />
    </div>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="downshift-5-menu"
      class="PhoneNumberInputStyles__CallingCodeInput-sc-80kraj-7 bzsSEv"
      data-testid="calling-code-input"
      role="combobox"
    >
      <div
        class="PhoneNumberInputStyles__CallingCodeFilterInputGroup-sc-80kraj-8 kdzBiN"
      >
        <input
          aria-autocomplete="list"
          aria-controls="downshift-5-menu"
          aria-labelledby="downshift-5-label"
          autocomplete="off"
          class="PhoneNumberInputStyles__CallingCodeFilterInput-sc-80kraj-9 jybfmh"
          data-testid="calling-code-filter-input"
          id="downshift-5-input"
          placeholder="Type country code or country name"
          value=""
        />
      </div>
      <ol
        aria-labelledby="downshift-5-label"
        class="PhoneNumberInputStyles__CallingCodeOptionsList-sc-80kraj-11 geNvIQ"
        id="downshift-5-menu"
        role="listbox"
      >
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 gMEijG"
          id="downshift-5-item-0"
          role="option"
          title="Indonesia"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +62
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Indonesia
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-5-item-1"
          role="option"
          title="Malaysia"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +60
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Malaysia
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-5-item-2"
          role="option"
          title="Singapore"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +65
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Singapore
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-5-item-3"
          role="option"
          title="Taiwan"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +886
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Taiwan
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-5-item-4"
          role="option"
          title="Vietnam"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +84
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Vietnam
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 iSowxl"
          id="downshift-5-item-5"
          role="option"
          title="Afghanistan"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +93
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Afghanistan
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-5-item-6"
          role="option"
          title="Albania"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +355
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Albania
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-5-item-7"
          role="option"
          title="Algeria"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +213
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Algeria
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-5-item-8"
          role="option"
          title="Germany"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +42
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Germany
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-5-item-9"
          role="option"
          title="United States"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +1
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              United States
            </div>
          </div>
        </li>
      </ol>
    </div>
    <div
      class="PhoneNumberInputStyles__Error-sc-80kraj-17 EDVOx"
      data-testid="error"
    />
  </div>
</DocumentFragment>
`;

exports[`<PhoneNumberInput> should match snapshot when a value is given 1`] = `
<DocumentFragment>
  <div
    class="PhoneNumberInputStyles__PhoneNumberInputContainer-sc-80kraj-0 bBjGkf"
  >
    <div
      class="PhoneNumberInputStyles__TopRow-sc-80kraj-1 ecZrTO"
      data-invalid="false"
    >
      <button
        class="PhoneNumberInputStyles__CallingCodeInputToggle-sc-80kraj-2 jtvyf"
        data-testid="calling-code-input-toggle"
      >
        +123
        <span
          class="PhoneNumberInputStyles__CallingCodeInputOpenIndicator-sc-80kraj-3 ibEuCp"
          id="downshift-1-toggle-button"
          tabindex="-1"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-x7d280-0 cJSNzi"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <polygon
              points="11.8 80.8 0 69 50 19 100 69 88.2 80.8 50 42.4"
            />
          </svg>
        </span>
      </button>
      <input
        aria-label="Mobile Number"
        class="PhoneNumberInputStyles__SignificantNumberInput-sc-80kraj-5 buMdAB"
        data-invalid="false"
        data-testid="significant-number-input"
        id="significant-number-input-1"
        placeholder="Mobile Number"
        type="tel"
        value="12345678"
      />
      <label
        class="PhoneNumberInputStyles__Label-sc-80kraj-4 hYHKGJ"
        for="significant-number-input-1"
      >
        Mobile Number
      </label>
      <div
        class="PhoneNumberInputStyles__TopRowAddon-sc-80kraj-6 cnoRYQ"
        data-testid="addon"
      />
    </div>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="downshift-1-menu"
      class="PhoneNumberInputStyles__CallingCodeInput-sc-80kraj-7 bzsSEv"
      data-testid="calling-code-input"
      role="combobox"
    >
      <div
        class="PhoneNumberInputStyles__CallingCodeFilterInputGroup-sc-80kraj-8 kdzBiN"
      >
        <input
          aria-autocomplete="list"
          aria-controls="downshift-1-menu"
          aria-labelledby="downshift-1-label"
          autocomplete="off"
          class="PhoneNumberInputStyles__CallingCodeFilterInput-sc-80kraj-9 jybfmh"
          data-testid="calling-code-filter-input"
          id="downshift-1-input"
          placeholder="Type country code or country name"
          value=""
        />
      </div>
      <ol
        aria-labelledby="downshift-1-label"
        class="PhoneNumberInputStyles__CallingCodeOptionsList-sc-80kraj-11 geNvIQ"
        id="downshift-1-menu"
        role="listbox"
      >
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 gMEijG"
          id="downshift-1-item-0"
          role="option"
          title="Indonesia"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +62
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Indonesia
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-1-item-1"
          role="option"
          title="Malaysia"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +60
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Malaysia
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-1-item-2"
          role="option"
          title="Singapore"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +65
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Singapore
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-1-item-3"
          role="option"
          title="Taiwan"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +886
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Taiwan
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-1-item-4"
          role="option"
          title="Vietnam"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +84
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Vietnam
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 iSowxl"
          id="downshift-1-item-5"
          role="option"
          title="Afghanistan"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +93
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Afghanistan
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-1-item-6"
          role="option"
          title="Albania"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +355
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Albania
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-1-item-7"
          role="option"
          title="Algeria"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +213
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Algeria
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-1-item-8"
          role="option"
          title="Germany"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +42
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Germany
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-1-item-9"
          role="option"
          title="United States"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +1
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              United States
            </div>
          </div>
        </li>
      </ol>
    </div>
    <div
      class="PhoneNumberInputStyles__Error-sc-80kraj-17 EDVOx"
      data-testid="error"
    />
  </div>
</DocumentFragment>
`;

exports[`<PhoneNumberInput> should render an empty state when loading 1`] = `
<DocumentFragment>
  <div
    class="PhoneNumberInputStyles__PhoneNumberInputContainer-sc-80kraj-0 bBjGkf"
  >
    <div
      class="PhoneNumberInputStyles__TopRow-sc-80kraj-1 ecZrTO"
      data-invalid="false"
    >
      <button
        class="PhoneNumberInputStyles__CallingCodeInputToggle-sc-80kraj-2 jtvyf"
        data-testid="calling-code-input-toggle"
      >
        +123
        <span
          class="PhoneNumberInputStyles__CallingCodeInputOpenIndicator-sc-80kraj-3 ibEuCp"
          id="downshift-13-toggle-button"
          tabindex="-1"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-x7d280-0 cJSNzi"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <polygon
              points="11.7984725 19 49.9935275 57.3950291 88.1885825 19 99.987055 30.7984725 49.9935275 80.792 0 30.7984725"
            />
          </svg>
        </span>
      </button>
      <input
        aria-label="Mobile Number"
        class="PhoneNumberInputStyles__SignificantNumberInput-sc-80kraj-5 gcYwNH"
        data-invalid="false"
        data-testid="significant-number-input"
        id="significant-number-input-1"
        placeholder="Mobile Number"
        type="tel"
        value=""
      />
      <label
        class="PhoneNumberInputStyles__Label-sc-80kraj-4 hYHKGJ"
        for="significant-number-input-1"
      >
        Mobile Number
      </label>
      <div
        class="PhoneNumberInputStyles__TopRowAddon-sc-80kraj-6 cnoRYQ"
        data-testid="addon"
      />
    </div>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="downshift-13-menu"
      class="PhoneNumberInputStyles__CallingCodeInput-sc-80kraj-7 jTxNga"
      data-testid="calling-code-input"
      role="combobox"
    >
      <div
        class="PhoneNumberInputStyles__CallingCodeFilterInputGroup-sc-80kraj-8 kdzBiN"
      >
        <input
          aria-autocomplete="list"
          aria-controls="downshift-13-menu"
          aria-labelledby="downshift-13-label"
          autocomplete="off"
          class="PhoneNumberInputStyles__CallingCodeFilterInput-sc-80kraj-9 jybfmh"
          data-testid="calling-code-filter-input"
          id="downshift-13-input"
          placeholder="Type country code or country name"
          value=""
        />
        <div
          aria-busy="true"
          aria-live="polite"
          class="LoadingStyle__LoadingContainer-fg2qx3-0 ioHJOi aries-loading PhoneNumberInputStyles__CallingCodeInputLoading-sc-80kraj-10 ihorHh"
          data-testid="calling-code-options-loading"
          role="alert"
        >
          <div
            class="LoadingStyle__Spinner-fg2qx3-1 fQRrhB"
          />
        </div>
      </div>
      <ol
        aria-labelledby="downshift-13-label"
        class="PhoneNumberInputStyles__CallingCodeOptionsList-sc-80kraj-11 geNvIQ"
        id="downshift-13-menu"
        role="listbox"
      >
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 gMEijG"
          id="downshift-13-item-0"
          role="option"
          title="Indonesia"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +62
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Indonesia
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-13-item-1"
          role="option"
          title="Malaysia"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +60
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Malaysia
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-13-item-2"
          role="option"
          title="Singapore"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +65
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Singapore
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-13-item-3"
          role="option"
          title="Taiwan"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +886
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Taiwan
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-13-item-4"
          role="option"
          title="Vietnam"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +84
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Vietnam
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 iSowxl"
          id="downshift-13-item-5"
          role="option"
          title="Afghanistan"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +93
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Afghanistan
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-13-item-6"
          role="option"
          title="Albania"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +355
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Albania
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-13-item-7"
          role="option"
          title="Algeria"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +213
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Algeria
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-13-item-8"
          role="option"
          title="Germany"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +42
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Germany
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-13-item-9"
          role="option"
          title="United States"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +1
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              United States
            </div>
          </div>
        </li>
      </ol>
    </div>
    <div
      class="PhoneNumberInputStyles__Error-sc-80kraj-17 EDVOx"
      data-testid="error"
    />
  </div>
</DocumentFragment>
`;

exports[`<PhoneNumberInput> should render an empty state when there are no calling code options 1`] = `
<DocumentFragment>
  <div
    class="PhoneNumberInputStyles__PhoneNumberInputContainer-sc-80kraj-0 bBjGkf"
  >
    <div
      class="PhoneNumberInputStyles__TopRow-sc-80kraj-1 ecZrTO"
      data-invalid="false"
    >
      <button
        class="PhoneNumberInputStyles__CallingCodeInputToggle-sc-80kraj-2 jtvyf"
        data-testid="calling-code-input-toggle"
      >
        +123
        <span
          class="PhoneNumberInputStyles__CallingCodeInputOpenIndicator-sc-80kraj-3 ibEuCp"
          id="downshift-11-toggle-button"
          tabindex="-1"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-x7d280-0 cJSNzi"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <polygon
              points="11.7984725 19 49.9935275 57.3950291 88.1885825 19 99.987055 30.7984725 49.9935275 80.792 0 30.7984725"
            />
          </svg>
        </span>
      </button>
      <input
        aria-label="Mobile Number"
        class="PhoneNumberInputStyles__SignificantNumberInput-sc-80kraj-5 gcYwNH"
        data-invalid="false"
        data-testid="significant-number-input"
        id="significant-number-input-1"
        placeholder="Mobile Number"
        type="tel"
        value=""
      />
      <label
        class="PhoneNumberInputStyles__Label-sc-80kraj-4 hYHKGJ"
        for="significant-number-input-1"
      >
        Mobile Number
      </label>
      <div
        class="PhoneNumberInputStyles__TopRowAddon-sc-80kraj-6 cnoRYQ"
        data-testid="addon"
      />
    </div>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="downshift-11-menu"
      class="PhoneNumberInputStyles__CallingCodeInput-sc-80kraj-7 jTxNga"
      data-testid="calling-code-input"
      role="combobox"
    >
      <div
        class="PhoneNumberInputStyles__CallingCodeFilterInputGroup-sc-80kraj-8 kdzBiN"
      >
        <input
          aria-autocomplete="list"
          aria-controls="downshift-11-menu"
          aria-labelledby="downshift-11-label"
          autocomplete="off"
          class="PhoneNumberInputStyles__CallingCodeFilterInput-sc-80kraj-9 jybfmh"
          data-testid="calling-code-filter-input"
          id="downshift-11-input"
          placeholder="Type country code or country name"
          value=""
        />
      </div>
      <ol
        aria-labelledby="downshift-11-label"
        class="PhoneNumberInputStyles__CallingCodeOptionsList-sc-80kraj-11 geNvIQ"
        id="downshift-11-menu"
        role="listbox"
      >
        <div
          class="PhoneNumberInputStyles__NoOptions-sc-80kraj-16 gMXdMt"
          data-testid="no-options"
        >
          Sorry, there are no results
        </div>
      </ol>
    </div>
    <div
      class="PhoneNumberInputStyles__Error-sc-80kraj-17 EDVOx"
      data-testid="error"
    />
  </div>
</DocumentFragment>
`;

exports[`<PhoneNumberInput> should render the given addon 1`] = `
<DocumentFragment>
  <div
    class="PhoneNumberInputStyles__PhoneNumberInputContainer-sc-80kraj-0 bBjGkf"
  >
    <div
      class="PhoneNumberInputStyles__TopRow-sc-80kraj-1 ecZrTO"
      data-invalid="false"
    >
      <button
        class="PhoneNumberInputStyles__CallingCodeInputToggle-sc-80kraj-2 jtvyf"
        data-testid="calling-code-input-toggle"
      >
        +123
        <span
          class="PhoneNumberInputStyles__CallingCodeInputOpenIndicator-sc-80kraj-3 ibEuCp"
          id="downshift-10-toggle-button"
          tabindex="-1"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-x7d280-0 cJSNzi"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <polygon
              points="11.8 80.8 0 69 50 19 100 69 88.2 80.8 50 42.4"
            />
          </svg>
        </span>
      </button>
      <input
        aria-label="Mobile Number"
        class="PhoneNumberInputStyles__SignificantNumberInput-sc-80kraj-5 gcYwNH"
        data-invalid="false"
        data-testid="significant-number-input"
        id="significant-number-input-1"
        placeholder="Mobile Number"
        type="tel"
        value=""
      />
      <label
        class="PhoneNumberInputStyles__Label-sc-80kraj-4 hYHKGJ"
        for="significant-number-input-1"
      >
        Mobile Number
      </label>
      <div
        class="PhoneNumberInputStyles__TopRowAddon-sc-80kraj-6 cnoRYQ"
        data-testid="addon"
      >
        <div
          class="TagStyle__TagContainer-sc-66xi2f-1 jSyrlx aries-tag"
          role="presentation"
          tabindex="0"
        >
          <label
            class="TagStyle__TagContent-sc-66xi2f-0 geReKz tag-content"
            tabindex="-1"
          >
            Foo
          </label>
        </div>
      </div>
    </div>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="downshift-10-menu"
      class="PhoneNumberInputStyles__CallingCodeInput-sc-80kraj-7 bzsSEv"
      data-testid="calling-code-input"
      role="combobox"
    >
      <div
        class="PhoneNumberInputStyles__CallingCodeFilterInputGroup-sc-80kraj-8 kdzBiN"
      >
        <input
          aria-autocomplete="list"
          aria-controls="downshift-10-menu"
          aria-labelledby="downshift-10-label"
          autocomplete="off"
          class="PhoneNumberInputStyles__CallingCodeFilterInput-sc-80kraj-9 jybfmh"
          data-testid="calling-code-filter-input"
          id="downshift-10-input"
          placeholder="Type country code or country name"
          value=""
        />
      </div>
      <ol
        aria-labelledby="downshift-10-label"
        class="PhoneNumberInputStyles__CallingCodeOptionsList-sc-80kraj-11 geNvIQ"
        id="downshift-10-menu"
        role="listbox"
      >
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 gMEijG"
          id="downshift-10-item-0"
          role="option"
          title="Indonesia"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +62
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Indonesia
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-10-item-1"
          role="option"
          title="Malaysia"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +60
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Malaysia
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-10-item-2"
          role="option"
          title="Singapore"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +65
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Singapore
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-10-item-3"
          role="option"
          title="Taiwan"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +886
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Taiwan
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-10-item-4"
          role="option"
          title="Vietnam"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +84
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Vietnam
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 iSowxl"
          id="downshift-10-item-5"
          role="option"
          title="Afghanistan"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +93
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Afghanistan
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-10-item-6"
          role="option"
          title="Albania"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +355
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Albania
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-10-item-7"
          role="option"
          title="Algeria"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +213
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Algeria
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-10-item-8"
          role="option"
          title="Germany"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +42
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Germany
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-10-item-9"
          role="option"
          title="United States"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +1
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              United States
            </div>
          </div>
        </li>
      </ol>
    </div>
    <div
      class="PhoneNumberInputStyles__Error-sc-80kraj-17 EDVOx"
      data-testid="error"
    />
  </div>
</DocumentFragment>
`;

exports[`<PhoneNumberInput> should render the given error 1`] = `
<DocumentFragment>
  <div
    class="PhoneNumberInputStyles__PhoneNumberInputContainer-sc-80kraj-0 bBjGkf"
  >
    <div
      class="PhoneNumberInputStyles__TopRow-sc-80kraj-1 ecZrTO"
      data-invalid="true"
    >
      <button
        class="PhoneNumberInputStyles__CallingCodeInputToggle-sc-80kraj-2 jtvyf"
        data-testid="calling-code-input-toggle"
      >
        +123
        <span
          class="PhoneNumberInputStyles__CallingCodeInputOpenIndicator-sc-80kraj-3 ibEuCp"
          id="downshift-9-toggle-button"
          tabindex="-1"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-x7d280-0 cJSNzi"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <polygon
              points="11.8 80.8 0 69 50 19 100 69 88.2 80.8 50 42.4"
            />
          </svg>
        </span>
      </button>
      <input
        aria-label="Mobile Number"
        class="PhoneNumberInputStyles__SignificantNumberInput-sc-80kraj-5 gcYwNH"
        data-invalid="true"
        data-testid="significant-number-input"
        id="significant-number-input-1"
        placeholder="Mobile Number"
        type="tel"
        value=""
      />
      <label
        class="PhoneNumberInputStyles__Label-sc-80kraj-4 hYHKGJ"
        for="significant-number-input-1"
      >
        Mobile Number
      </label>
      <div
        class="PhoneNumberInputStyles__TopRowAddon-sc-80kraj-6 cnoRYQ"
        data-testid="addon"
      />
    </div>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="downshift-9-menu"
      class="PhoneNumberInputStyles__CallingCodeInput-sc-80kraj-7 bzsSEv"
      data-testid="calling-code-input"
      role="combobox"
    >
      <div
        class="PhoneNumberInputStyles__CallingCodeFilterInputGroup-sc-80kraj-8 kdzBiN"
      >
        <input
          aria-autocomplete="list"
          aria-controls="downshift-9-menu"
          aria-labelledby="downshift-9-label"
          autocomplete="off"
          class="PhoneNumberInputStyles__CallingCodeFilterInput-sc-80kraj-9 jybfmh"
          data-testid="calling-code-filter-input"
          id="downshift-9-input"
          placeholder="Type country code or country name"
          value=""
        />
      </div>
      <ol
        aria-labelledby="downshift-9-label"
        class="PhoneNumberInputStyles__CallingCodeOptionsList-sc-80kraj-11 geNvIQ"
        id="downshift-9-menu"
        role="listbox"
      >
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 gMEijG"
          id="downshift-9-item-0"
          role="option"
          title="Indonesia"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +62
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Indonesia
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-9-item-1"
          role="option"
          title="Malaysia"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +60
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Malaysia
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-9-item-2"
          role="option"
          title="Singapore"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +65
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Singapore
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-9-item-3"
          role="option"
          title="Taiwan"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +886
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Taiwan
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-9-item-4"
          role="option"
          title="Vietnam"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +84
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Vietnam
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 iSowxl"
          id="downshift-9-item-5"
          role="option"
          title="Afghanistan"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +93
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Afghanistan
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-9-item-6"
          role="option"
          title="Albania"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +355
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Albania
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-9-item-7"
          role="option"
          title="Algeria"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +213
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Algeria
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-9-item-8"
          role="option"
          title="Germany"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +42
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Germany
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-9-item-9"
          role="option"
          title="United States"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +1
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              United States
            </div>
          </div>
        </li>
      </ol>
    </div>
    <div
      class="PhoneNumberInputStyles__Error-sc-80kraj-17 EDVOx"
      data-testid="error"
    >
      You dun goofed
    </div>
  </div>
</DocumentFragment>
`;

exports[`<PhoneNumberInput> should toggle the calling code input on clicking the toggle button 1`] = `
<DocumentFragment>
  <div
    class="PhoneNumberInputStyles__PhoneNumberInputContainer-sc-80kraj-0 bBjGkf"
  >
    <div
      class="PhoneNumberInputStyles__TopRow-sc-80kraj-1 ecZrTO"
      data-invalid="false"
    >
      <button
        class="PhoneNumberInputStyles__CallingCodeInputToggle-sc-80kraj-2 jtvyf"
        data-testid="calling-code-input-toggle"
      >
        +123
        <span
          class="PhoneNumberInputStyles__CallingCodeInputOpenIndicator-sc-80kraj-3 ibEuCp"
          id="downshift-2-toggle-button"
          tabindex="-1"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-x7d280-0 cJSNzi"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <polygon
              points="11.7984725 19 49.9935275 57.3950291 88.1885825 19 99.987055 30.7984725 49.9935275 80.792 0 30.7984725"
            />
          </svg>
        </span>
      </button>
      <input
        aria-label="Mobile Number"
        class="PhoneNumberInputStyles__SignificantNumberInput-sc-80kraj-5 gcYwNH"
        data-invalid="false"
        data-testid="significant-number-input"
        id="significant-number-input-1"
        placeholder="Mobile Number"
        type="tel"
        value=""
      />
      <label
        class="PhoneNumberInputStyles__Label-sc-80kraj-4 hYHKGJ"
        for="significant-number-input-1"
      >
        Mobile Number
      </label>
      <div
        class="PhoneNumberInputStyles__TopRowAddon-sc-80kraj-6 cnoRYQ"
        data-testid="addon"
      />
    </div>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="downshift-2-menu"
      class="PhoneNumberInputStyles__CallingCodeInput-sc-80kraj-7 jTxNga"
      data-testid="calling-code-input"
      role="combobox"
    >
      <div
        class="PhoneNumberInputStyles__CallingCodeFilterInputGroup-sc-80kraj-8 kdzBiN"
      >
        <input
          aria-autocomplete="list"
          aria-controls="downshift-2-menu"
          aria-labelledby="downshift-2-label"
          autocomplete="off"
          class="PhoneNumberInputStyles__CallingCodeFilterInput-sc-80kraj-9 jybfmh"
          data-testid="calling-code-filter-input"
          id="downshift-2-input"
          placeholder="Type country code or country name"
          value=""
        />
      </div>
      <ol
        aria-labelledby="downshift-2-label"
        class="PhoneNumberInputStyles__CallingCodeOptionsList-sc-80kraj-11 geNvIQ"
        id="downshift-2-menu"
        role="listbox"
      >
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 gMEijG"
          id="downshift-2-item-0"
          role="option"
          title="Indonesia"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +62
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Indonesia
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-2-item-1"
          role="option"
          title="Malaysia"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +60
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Malaysia
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-2-item-2"
          role="option"
          title="Singapore"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +65
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Singapore
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-2-item-3"
          role="option"
          title="Taiwan"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +886
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Taiwan
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-2-item-4"
          role="option"
          title="Vietnam"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +84
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Vietnam
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 iSowxl"
          id="downshift-2-item-5"
          role="option"
          title="Afghanistan"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +93
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Afghanistan
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-2-item-6"
          role="option"
          title="Albania"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +355
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Albania
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-2-item-7"
          role="option"
          title="Algeria"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +213
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Algeria
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-2-item-8"
          role="option"
          title="Germany"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +42
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              Germany
            </div>
          </div>
        </li>
        <li
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 honsdf"
          id="downshift-2-item-9"
          role="option"
          title="United States"
        >
          <div
            class="Box__StyledBox-pr7b7l-0 dKzFLf Flex__StyledFlex-sc-11ryoct-0 jfpAHx"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jWmjH"
            >
              +1
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 kvycWm"
            >
              United States
            </div>
          </div>
        </li>
      </ol>
    </div>
    <div
      class="PhoneNumberInputStyles__Error-sc-80kraj-17 EDVOx"
      data-testid="error"
    />
  </div>
</DocumentFragment>
`;
